# AIE6

./: Aqsa's_Copy_of_Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  README.md
01_Prompt Engineering and Prototyping Best Practices/: README.md
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  vectordatabase.py
03_End-to-End_RAG/: README.md
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  README.md
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: 07_Synthetic_Data_Generation_and_LangSmith.code-workspace  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Finetuning_Embeddings/: Aqsa's_Copy_of_Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  README.md  pyproject.toml  test_dataset.jsonl  training_dataset.jsonl  val_dataset.jsonl
10_Finetuning_Reasoning_Model/: README.md  [Aqsa's_copy]_AI_Makerspace_Unsloth_GRPO_Training.ipynb  [aqsa's_copy]_ai_makerspace_unsloth_grpo_training.py  _aqsa_s_copy_ai_makerspace_unsloth_grpo_training.ipynb  (+1 more)
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  dataset.pkl  documents.pkl  pyproject.toml
(+44 files in other folders)
