[project]
name = "13-advanced-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere>=0.4.2",
    "langchain-openai>=0.3.7",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",  
    "pandas>=1.5",            # pin a minimum version you need
    "ragas>=0.2.0",         # the RAGAS testset generator
    "langsmith>=0.3.42",
    "rapidfuzz",
    "langsmith>=0.3.42"     # LangSmith client SDK :contentReference[oaicite:1]{index=1}
]
